--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,15 @@
-# OpenAI / DeepSeek Key
-OPENAI_API_KEY=sk-your-key-here
-
-# OpenRouteService Key (Optional, hardcoded in secrets.dart for mobile currently)
-# ORS_API_KEY=...
-
-# Django Secret Key (For production)
-SECRET_KEY=your-secret-key
+SECRET_KEY=your-django-secret-key
 DEBUG=True
+ALLOWED_HOSTS=localhost,127.0.0.1,*.ngrok-free.dev
+
+# Database (Default is SQLite, but you can configure PostgreSQL)
+# DB_NAME=wayfinder
+# DB_USER=postgres
+# DB_PASSWORD=yourpassword
+
+# Google OAuth2 (for Google Sign-In)
+GOOGLE_OAUTH2_CLIENT_ID=your-google-client-id.apps.googleusercontent.com
+
+# AI API Keys
+GEMINI_API_KEY=your-gemini-api-key
+PICOVOICE_API_KEY=your-picovoice-api-key
