--- a/WayFinder/lib/secrets.dart.example
+++ b/WayFinder/lib/secrets.dart.example
@@ -1,9 +1,11 @@
 class Secrets {
-  // OpenRouteService API Key for navigation
-  // Get your free key at: https://openrouteservice.org/dev/#/signup
-  static const String openRouteServiceApiKey = 'YOUR_ORS_API_KEY_HERE';
-  
-  // Picovoice Access Key for wake word detection
-  // Get your free key at: https://console.picovoice.ai/
-  static const String picovoiceAccessKey = 'YOUR_PICOVOICE_ACCESS_KEY_HERE';
+  // Get yours at https://openrouteservice.org/dev/#/signup
+  static const String openRouteServiceApiKey = 'YOUR_OPEN_ROUTE_SERVICE_KEY_HERE';
+
+  // Get yours at https://console.picovoice.ai/
+  static const String picovoiceAccessKey = 'YOUR_PICOVOICE_ANDROID_KEY_HERE';
+  static const String picovoiceAccessKeyIos = 'YOUR_PICOVOICE_IOS_KEY_HERE'; 
+
+  // Standard Google Maps API Key for Geocoding/Maps
+  static const String googleMapsApiKey = 'YOUR_GOOGLE_MAPS_KEY_HERE';
 }
