--- a/WayFinder/pubspec.yaml
+++ b/WayFinder/pubspec.yaml
@@ -24,27 +24,47 @@ dependencies:
   intl: ^0.20.2
   path_provider: ^2.1.2
   speech_to_text: ^7.0.0
-  porcupine_flutter: ^3.0.1
+  porcupine_flutter: ^4.0.0
   google_sign_in: ^6.1.6
+  firebase_core: ^2.24.2
+  firebase_auth: ^4.15.3
   
   # Navigation
   geolocator: ^13.0.2
   geocoding: ^3.0.0
   flutter_polyline_points: ^2.1.0
   
-  # UI
+  # UI & Animations - PREMIUM FEATURES
   google_fonts: ^6.1.0
   flutter_svg: ^2.0.10
   animate_do: ^3.3.4
   loading_animation_widget: ^1.2.0
+  lottie: ^3.1.0                      # Premium animations
+  shimmer: ^3.0.0                     # Loading shimmer effects
+  smooth_page_indicator: ^1.1.0      # Onboarding indicators
+  confetti: ^0.7.0                   # Celebration effects
+  vibration: ^3.1.5                  # Haptic feedback (Upgraded to fix build)
+  flutter_animate: ^4.5.0            # Advanced animations
+  rive: ^0.13.0                      # Interactive animations
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^3.0.0
+  flutter_launcher_icons: ^0.13.1    # Generate app icons
 
 flutter:
   uses-material-design: true
   generate: true # Enable l10n generation
   assets:
-    - assets/words/way_finder_android.ppn
+    - assets/words/
+    - assets/animations/
+    - assets/sounds/
+    - assets/images/
+    
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: "assets/images/app_icon.png"
+  adaptive_icon_background: "#0A0E27"
+  adaptive_icon_foreground: "assets/images/app_icon_foreground.png"
