--- a/WayFinder/android/app/src/main/AndroidManifest.xml
+++ b/WayFinder/android/app/src/main/AndroidManifest.xml
@@ -13,6 +13,8 @@
     <application
         android:label="WayFinder"
         android:name="${applicationName}"
+        android:usesCleartextTraffic="true"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
