feat: Premium HUD Upgrade, RAG Memory Integration, and Real-time WebSocket Vision Gateway. - Added 'Iron Man' style HUD with live telemetry and scanning animations. - Implemented Vision Sonar for proactive object detection. - Integrated VectorMemory (RAG) for long-term assistant context. - Added Affective TTS with mood-based intonation. - Created FastAPI WebSocket server for ultra-low latency vision processing. - Implementation of premium startup sequence with haptic feedback.

--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,9 @@ secrets.dart
 *.ppn.backup
 tunnels.json
 google-services.json
+
+# User Data & Private Cache
+user_profile.json
+data/memory/
+vision_assistant/user_profile.json
+vision_glasses/user_profile.json
